--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --main-bg-color: #ffffff;
   --secondary-bg-color: #f4f4fd;
   --dark-bg-color: #2e2f42;
+  --border-card-color: #e7e9fc;
 }
 
 body {
@@ -48,8 +49,25 @@ img {
   max-width: 100%;
 }
 
+a {
+  display: inline-block;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+
 .container {
-  max-width: 1158px;
+  max-width: 1440px;
   padding-left: 156px;
   padding-right: 156px;
   margin-left: auto;
@@ -94,7 +112,32 @@ img {
 
 /* ====================== header-styles ================ */
 
+.header-wraper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-nav {
+  display: flex;
+  gap: 76px;
+  align-items: center;
+}
+
+.header-nav-list {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+
+.header-contacts-list {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+
 .logo-link {
+  /* padding: 24px 0; */
   font-family: Raleway, sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -109,6 +152,7 @@ img {
 }
 
 .header-nav-link {
+  padding: 24px 0;
   color: var(--secondary-text-color);
   font-weight: 500;
   letter-spacing: 0.02em;
@@ -121,6 +165,7 @@ img {
 }
 
 .header-contacts-link {
+  padding: 24px 0;
   letter-spacing: 0.02em;
 }
 
@@ -136,7 +181,12 @@ img {
   background-color: var(--dark-bg-color);
 }
 
+.hero-wraper {
+  padding: 188px 316px;
+}
+
 .hero-title {
+  margin-bottom: 48px;
   color: var(--dark-bg-text-color);
   font-size: 56px;
   font-weight: 700;
@@ -145,6 +195,8 @@ img {
 }
 
 .hero-button {
+  padding: 16px 32px;
+  border-radius: 4px;
   border: none;
   color: var(--dark-bg-text-color);
   font-weight: 500;
@@ -161,20 +213,94 @@ img {
 
 /* ====================== advantages =================== */
 
+.advantages-list {
+  display: flex;
+  gap: 24px;
+}
+
+/* .advantages-item {
+  flex-basis: calc((100% - 72px) / 4);
+} */
+
+.advantages-item-title {
+  margin-bottom: 8px;
+  text-align: start;
+}
+.advantages-item-text {
+  text-align: start;
+}
+
 /* ====================== team ===================== */
 
 .team {
   background-color: var(--secondary-bg-color);
 }
 
+.team-title {
+  margin-bottom: 72px;
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+}
+
 .team-item {
+  flex-basis: calc((100% - 72px) / 4);
   background-color: var(--main-bg-color);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.team-item-wraper {
+  padding: 32px 0;
+}
+
+.section-item-title {
+  margin-bottom: 8px;
+}
+
+/* ====================== portfolio ================== */
+
+.portfolio-title {
+  margin-bottom: 72px;
+}
+
+.portfolio-list {
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+}
+
+.portfolio-item {
+  flex-basis: calc((100% - 48px) / 3);
+  margin-bottom: 48px;
+}
+
+.portfolio-wraper {
+  padding: 32px 16px;
+  border: 1px solid var(--border-card-color);
+  border-top: 0;
+}
+
+.portfolio-item-title {
+  margin-bottom: 8px;
+  text-align: start;
+}
+
+.portfolio-item-text {
+  text-align: start;
 }
 
 /* ====================== footer =================== */
 
 .footer {
+  padding: 100px 0;
   background-color: var(--dark-bg-color);
+  text-align: start;
 }
 
 .footer-logo {
@@ -182,5 +308,7 @@ img {
 }
 
 .footer-text {
+  margin-top: 17.5px;
+  width: 264px;
   color: var(--footer-text-color);
 }
