--- a/css/styles.css
+++ b/css/styles.css
@@ -67,9 +67,9 @@ a {
 }
 
 .container {
-  max-width: 1440px;
-  padding-left: 156px;
-  padding-right: 156px;
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -112,6 +112,9 @@ a {
 
 /* ====================== header-styles ================ */
 
+.header {
+  border-bottom: 1px solid var(--border-card-color);
+}
 .header-wraper {
   display: flex;
   align-items: center;
