--- a/css/styles.css
+++ b/css/styles.css
@@ -127,11 +127,14 @@ a {
   align-items: center;
 }
 
+.header-logo-link {
+  margin-right: 76px;
+}
+
 .header-nav-list {
   display: flex;
   gap: 40px;
   align-items: center;
-  margin-left: 76px;
 }
 
 .header-contacts-list {
@@ -203,6 +206,7 @@ a {
   display: block;
   margin: 0 auto;
   padding: 16px 32px;
+  min-width: 169px;
   border-radius: 4px;
   border: none;
   color: var(--dark-bg-text-color);
@@ -225,9 +229,9 @@ a {
   gap: 24px;
 }
 
-/* .advantages-item {
-  flex-basis: calc((100% - 72px) / 4);
-} */
+.advantages-item {
+  width: calc((100% - 72px) / 4);
+}
 
 .advantages-item-title {
   margin-bottom: 8px;
@@ -279,12 +283,12 @@ a {
 .portfolio-list {
   display: flex;
   gap: 24px;
+  row-gap: 48px;
   flex-wrap: wrap;
 }
 
 .portfolio-item {
   flex-basis: calc((100% - 48px) / 3);
-  margin-bottom: 48px;
 }
 
 .portfolio-wraper {
@@ -310,12 +314,15 @@ a {
   text-align: start;
 }
 
+.footer-logo-link {
+  margin-bottom: 16px;
+}
+
 .footer-logo {
   color: var(--footer-text-color);
 }
 
 .footer-text {
-  margin-top: 17.5px;
   width: 264px;
   color: var(--footer-text-color);
 }
